--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -1,1 +1,15 @@
+include ../common.blocks/block-header/block-header
+
+
+doctype html
+html
+    head
+        meta(charset = 'utf-8')
+        title Resume
+    body
+        +header('PROFILE_ICON.png', 'profile')
+
+
+
+
 
