complete block-header

--- a/src/common.blocks/block-header/block-header__line.scss
+++ b/src/common.blocks/block-header/block-header__line.scss
@@ -1,6 +1,6 @@
 .block-header__line {
-    width: 337px;
-    height: 8.514px;
+    width: 40.898%;
+    height: 0.45vw;
     background-color: #3d6cb0;
 
 }
