--- a/src/common.blocks/block-header/block-header__name.scss
+++ b/src/common.blocks/block-header/block-header__name.scss
@@ -1,12 +1,11 @@
 
 
 .block-header__name {
-  //width: 300px;
-  //height: 57px;
   color: #3d6cb0;
   font-family: "Myriad Pro";
-  font-size: 82px;
+  font-size: 3.306vw;
+  white-space: nowrap;
   font-weight: 700;
   text-transform: uppercase;
-  background-color: yellow;
+  //background-color: yellow;
 }
