--- a/src/common.blocks/block-header/block-header__wrapper.scss
+++ b/src/common.blocks/block-header/block-header__wrapper.scss
@@ -1,3 +1,7 @@
 .block-header__wrapper {
   width: 33.226%;
+  //background-color: lightpink;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
