fix font from Myriad Pro to Myriad Pro - Bold

--- a/src/common.blocks/block-header/block-header__name.scss
+++ b/src/common.blocks/block-header/block-header__name.scss
@@ -2,7 +2,7 @@
 
 .block-header__name {
   color: #3d6cb0;
-  font-family: "Myriad Pro";
+  font-family: "Myriad Pro - Bold";
   font-size: 3.306vw;
   white-space: nowrap;
   font-weight: 700;
