--- a/src/common.blocks/block-header/block-header__name.scss
+++ b/src/common.blocks/block-header/block-header__name.scss
@@ -3,6 +3,7 @@
 .block-header__name {
   color: #3d6cb0;
   font-family: "Myriad Pro - Bold";
+  margin-left: 3%;
   font-size: 3.306vw;
   white-space: nowrap;
   font-weight: 700;
