--- a/src/common.blocks/block-header/block-header__wrapper.scss
+++ b/src/common.blocks/block-header/block-header__wrapper.scss
@@ -2,6 +2,6 @@
   width: 100%;
   //background-color: lightpink;
   display: flex;
-  justify-content: space-between;
+  //justify-content: space-between;
   align-items: center;
 }
