--- a/src/common.blocks/block-header/block-header__line.scss
+++ b/src/common.blocks/block-header/block-header__line.scss
@@ -1,5 +1,6 @@
 .block-header__line {
-    width: 40.898%;
+    width: 100%;
+    margin-left: 2%;
     height: 0.45vw;
     background-color: #3d6cb0;
 
