--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -8,4 +8,10 @@
 @import '../common.blocks/contact/contact__table';
 @import '../common.blocks/contact/contact__data';
 @import '../common.blocks/contact/contact__type';
+@import '../common.blocks/skills/skills__content';
+@import '../common.blocks/skills/skills__name';
+@import '../common.blocks/skills/skills__level';
+@import '../common.blocks/skills/skills__point/skills__point';
+@import '../common.blocks/skills/skills__point/skills__point_checked';
+
 
