--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -1,6 +1,8 @@
 include ../common.blocks/block-header/block-header
 include ../common.blocks/contact/contact__content
 include ../common.blocks/skills/skills__skill
+include ../common.blocks/education/education__item
+//include ../common.blocks/education/education__description
 
 doctype html
 html
@@ -25,6 +27,15 @@ html
                 +skill('teamwork', '11')
                 +skill('innovate', '6')
                 +skill('communication', '11')
+        div(class=['section-wrapper', 'section-wrapper_width_wide'])
+            +header('EDUCATION_ICON.png', 'education')
+            ul.education__ul
+                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+
+
 
 
 
