change font-size coeff from 0.744 to 0.55 in blocks profile, contacts, skills

--- a/src/common.blocks/contact/contact__type.scss
+++ b/src/common.blocks/contact/contact__type.scss
@@ -1,7 +1,7 @@
 .contact__type {
   color: #3d6cb0;
   font-family: "Myriad Pro - Bold";
-  font-size: 32px;
+  font-size: 41px*0.55;
   text-transform: uppercase;
   //border: 1px solid black;
   //background-color: bisque;
