--- a/src/common.blocks/profile/profile__content.scss
+++ b/src/common.blocks/profile/profile__content.scss
@@ -2,7 +2,7 @@
   width: 100%;
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 24px;
+  font-size: 31px*0.55;
   margin-top: 30px;
   .bold {
     font-family: "Myriad Pro - Bold";
