--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -1,6 +1,15 @@
 @import '../fonts/fonts';
+@import '../common.blocks/header/header__disk';
+@import '../common.blocks/header/header__disk-inner';
+@import '../common.blocks/header/header__name';
+@import '../common.blocks/header/header__name-here';
+@import '../common.blocks/header/header__surname';
+@import '../common.blocks/header/header__job';
+
 @import '../common.blocks/section-wrapper/section-wrapper';
+@import '../common.blocks/section-wrapper/section-wrapper_header';
 @import '../common.blocks/section-wrapper/section-wrapper_width_wide';
+@import '../common.blocks/section-wrapper/section-wrapper_column_right';
 @import '../common.blocks/block-header/block-header__wrapper';
 @import '../common.blocks/block-header/block-header__name';
 @import '../common.blocks/block-header/block-header__line';
