change education marker size

--- a/src/common.blocks/education/education__item.pug
+++ b/src/common.blocks/education/education__item.pug
@@ -1,6 +1,6 @@
 - var educationDescription = 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.'
 mixin education(degree, studyingTime, universityName)
-    li
+    li.education__li
         | <span class="education__degree">#{degree}</span>
         | <span class="education__studying-time">//#{studyingTime}</span>
         | <br>
