--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -10,38 +10,39 @@ html
         meta(charset = 'utf-8')
         title Resume
     body
-        div(class=['section-wrapper', 'section-wrapper_header'])
-            .header__disk
-                .header__disk-inner
-            .header__name
-                span.header__name-here NAME HERE
-                <br>
-                span.header__surname SURNAME
-            .header__job GRAPHIC DESIGNER
-        .section-wrapper
-            +header('PROFILE_ICON.png', 'profile')
-            include ../common.blocks/profile/profile__content
-        .section-wrapper
-            +header('CONTACT_ICON.png', 'contact')
-            table.contact__table
-                +contact('adress', 'Main Street, City')
-                +contact('e-mail', 'contact@domain.com')
-                +contact('phone', '555-555-555')
-                +contact('website', 'www.yourweb.com')
-        .section-wrapper
-            +header('SKILLS_ICON.png', 'skills')
-            .skills__content
-                +skill('creative', '9')
-                +skill('teamwork', '11')
-                +skill('innovate', '6')
-                +skill('communication', '11')
-        div(class=['section-wrapper', 'section-wrapper_width_wide', 'section-wrapper_column_right'])
-            +header('EDUCATION_ICON.png', 'education')
-            ul.education__ul
-                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
-                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
-                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
-                +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+        .layout-grid
+            div(class=['section-wrapper', 'section-wrapper_header'])
+                .header__disk
+                    .header__disk-inner
+                .header__name
+                    span.header__name-here NAME HERE
+                    <br>
+                    span.header__surname SURNAME
+                .header__job GRAPHIC DESIGNER
+            .section-wrapper
+                +header('PROFILE_ICON.png', 'profile')
+                include ../common.blocks/profile/profile__content
+            .section-wrapper
+                +header('CONTACT_ICON.png', 'contact')
+                table.contact__table
+                    +contact('adress', 'Main Street, City')
+                    +contact('e-mail', 'contact@domain.com')
+                    +contact('phone', '555-555-555')
+                    +contact('website', 'www.yourweb.com')
+            .section-wrapper
+                +header('SKILLS_ICON.png', 'skills')
+                .skills__content
+                    +skill('creative', '9')
+                    +skill('teamwork', '11')
+                    +skill('innovate', '6')
+                    +skill('communication', '11')
+            div(class=['section-wrapper', 'section-wrapper_width_wide'])
+                +header('EDUCATION_ICON.png', 'education')
+                ul.education__ul
+                    +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+                    +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+                    +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
+                    +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
 
 
 
