--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -29,4 +29,5 @@
 @import '../common.blocks/education/education__stydying-time';
 @import '../common.blocks/education/education__university-name';
 @import '../common.blocks/education/education__description';
+@import '../common.blocks/experience/experience__company-name';
 
