--- a/src/common.blocks/education/education__item.pug
+++ b/src/common.blocks/education/education__item.pug
@@ -1,7 +1,13 @@
 - var educationDescription = 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.'
-mixin education(degree, studyingTime, universityName)
+mixin education(degree, studyingTime, universityName, mode)
+    - var firstClass;
+    if mode
+        - firstClass = 'education__degree experience__company-name'
+    else
+        - firstClass = 'education__degree'
+
     li.education__li
-        | <span class="education__degree">#{degree}</span>
+        | <span class="#{firstClass}">#{degree}</span>
         | <span class="education__studying-time">//#{studyingTime}</span>
         | <br>
         | <span class="education__university-name">#{universityName}</span>
