--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -30,4 +30,9 @@
 @import '../common.blocks/education/education__university-name';
 @import '../common.blocks/education/education__description';
 @import '../common.blocks/experience/experience__company-name';
+@import '../common.blocks/software/software__content-wrapper';
+@import '../common.blocks/software/software__item';
+@import '../common.blocks/software/software__tool';
+@import '../common.blocks/software/software__scale';
+@import '../common.blocks/software/software__level';
 
