set padding for contact table

--- a/src/common.blocks/contact/contact__type.scss
+++ b/src/common.blocks/contact/contact__type.scss
@@ -4,5 +4,8 @@
   font-size: 41px*0.55;
   text-transform: uppercase;
   //border: 1px solid black;
+  padding: 40px*0.55;
+  padding-right: 85px*0.55;
+  padding-left: 0px;
   //background-color: bisque;
 }
