change font-sizes to em, begin fit sizes(block header is done)

--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -10,7 +10,7 @@ html
     head
         meta(charset = 'utf-8')
         title Resume
-    body
+    body.body
         .layout-grid
             div(class=['section-wrapper', 'section-wrapper_header'])
                 .header__disk
