--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -1,3 +1,4 @@
+@import '../common.blocks/body/body';
 @import '../fonts/fonts';
 @import '../common.blocks/layout-grid/layout-grid';
 @import '../common.blocks/header/header__disk';
