--- a/src/common.blocks/block-header/block-header__line.scss
+++ b/src/common.blocks/block-header/block-header__line.scss
@@ -1,6 +1,8 @@
 .block-header__line {
     width: 100%;
-    margin-left: 2%;
+    margin-left: 1.85%;
+    margin-top: -1px;
+    margin-right: 1px;
     height: 0.45vw;
     background-color: #3d6cb0;
 
