--- a/src/common.blocks/block-header/block-header__name.scss
+++ b/src/common.blocks/block-header/block-header__name.scss
@@ -3,10 +3,10 @@
 .block-header__name {
   color: #3d6cb0;
   font-family: "Myriad Pro - Bold";
-  margin-left: 3%;
-  font-size: 3.306vw;
+  margin-left: 2.4%;
+  font-size: 3.250vw;
   white-space: nowrap;
-  font-weight: 700;
+  //font-weight: 700;
   text-transform: uppercase;
   //background-color: yellow;
 }
