--- a/src/common.blocks/education/education__degree.scss
+++ b/src/common.blocks/education/education__degree.scss
@@ -1,6 +1,6 @@
 .education__degree {
   color: #3d6cb0;
   font-family: "Myriad Pro - Bold";
-  font-size: 51px*0.55;
+  font-size: (51/31) + em;
   text-transform: uppercase;
 }
