--- a/src/common.blocks/education/education__li.scss
+++ b/src/common.blocks/education/education__li.scss
@@ -1,5 +1,6 @@
 .education__li {
   position: relative;
+  margin-bottom: 41px*0.55;
 }
 
 .education__li:before {
@@ -12,4 +13,8 @@
   position: absolute;
   left: -43px*0.55-40px*0.55;
   top: 7px;
+}
+
+.education__li:nth-child(1) {
+  margin-top: 54px*0.55;
 }
