--- a/src/common.blocks/education/education__stydying-time.scss
+++ b/src/common.blocks/education/education__stydying-time.scss
@@ -1,6 +1,6 @@
 .education__studying-time {
   color: #020202;
   font-family: "Myriad Pro - Regular";
-  font-size: 51px*0.55;
+  font-size: (51/31) + em;
   font-weight: 400;
 }
