--- a/src/common.blocks/header/header__job.scss
+++ b/src/common.blocks/header/header__job.scss
@@ -1,8 +1,8 @@
 .header__job {
   color: #000000;
   font-family: "Myriad Pro - Bold";
-  font-size: 50px*0.55;
-  font-weight: 700;
+  font-size: 1.565em;
   text-transform: uppercase;
-  margin-top: 20px*0.55;
+  margin-top: 15.1px*0.55;
+  margin-left: 15px;
 }
