--- a/src/common.blocks/header/header__name-here.scss
+++ b/src/common.blocks/header/header__name-here.scss
@@ -1,8 +1,9 @@
 .header__name-here {
   color: #000000;
   font-family: "Myriad Pro - Light Semi Ext";
-  font-size: 104px*0.55;
-  font-weight: 400;
+  font-size: 3.46em;
+  font-weight: 600;
   text-transform: uppercase;
+  margin-left: 17px;
   //background-color: lightpink;
 }
