--- a/src/common.blocks/profile/profile__content.scss
+++ b/src/common.blocks/profile/profile__content.scss
@@ -2,8 +2,8 @@
   width: 100%;
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 31px*0.55;
-  margin-top: 30px;
+  font-size: 1em;
+  margin-top: 17px;
   .bold {
     font-family: "Myriad Pro - Bold";
   }
