--- a/src/common.blocks/section-wrapper/section-wrapper.scss
+++ b/src/common.blocks/section-wrapper/section-wrapper.scss
@@ -1,5 +1,8 @@
 .section-wrapper {
   width: 37%;
+  max-width: 824px*0.774;
   //width: 453px;
-  margin-bottom: 96px*0.55;
+  margin-bottom: 70px*0.55;
+
+  background-color: bisque;
 }
