--- a/src/common.blocks/software/software__tool.scss
+++ b/src/common.blocks/software/software__tool.scss
@@ -1,7 +1,7 @@
 .software__item {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 51px*0.55;
+  font-size: (51/31) + em;
   font-weight: 400;
   text-transform: uppercase;
 }
