--- a/src/common.blocks/contact/contact__data.scss
+++ b/src/common.blocks/contact/contact__data.scss
@@ -1,7 +1,7 @@
 .contact__data {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 41px*0.55;
+  font-size: (41/31) + em;
   //font-weight: 400;
   //border: 1px solid black;
   //background-color: aquamarine;
