--- a/src/common.blocks/contact/contact__type.scss
+++ b/src/common.blocks/contact/contact__type.scss
@@ -1,7 +1,7 @@
 .contact__type {
   color: #3d6cb0;
   font-family: "Myriad Pro - Bold";
-  font-size: 41px*0.55;
+  font-size: (41/31) + em;
   text-transform: uppercase;
   //border: 1px solid black;
   padding: 40px*0.55;
