--- a/src/common.blocks/education/education__description.scss
+++ b/src/common.blocks/education/education__description.scss
@@ -1,6 +1,6 @@
 .education__description {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 31px*0.55;
+  font-size: 1em;
   font-weight: 400;
 }
