--- a/src/common.blocks/header/header__disk.scss
+++ b/src/common.blocks/header/header__disk.scss
@@ -1,11 +1,13 @@
 .header__disk {
-  width: 465px*0.55;
-  height: 465px*0.55;
+  width: 450px*0.55;
+  height: 450px*0.55;
   border: 2px solid #3d6cb0;
   border-radius: 50%;
   //padding: 30px*0.55;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 74px*0.55;
+  margin-bottom: 64px*0.55;
+  margin-left: 15px;
+  margin-top: 12px;
 }
