--- a/src/common.blocks/header/header__surname.scss
+++ b/src/common.blocks/header/header__surname.scss
@@ -1,8 +1,11 @@
 .header__surname {
   color: #000000;
   font-family: "Myriad Pro - Bold";
-  font-size: 123px*0.55;
+  font-size: 4.015em;
   font-weight: 700;
   text-transform: uppercase;
+  margin-left: 15px;
+  margin-top: 100px;
+  line-height: 0.98;
   //background-color: aquamarine;
 }
