--- a/src/common.blocks/layout-grid/layout-grid.scss
+++ b/src/common.blocks/layout-grid/layout-grid.scss
@@ -1,10 +1,13 @@
 .layout-grid {
   display: flex;
-  flex-flow: column wrap;
-  align-content: space-between;
-  margin-left: 120px*0.55;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  //align-content: space-between;
+  margin-left: 117.3px*0.55;
   margin-right: 115px*0.55;
   margin-top:150px*0.55;
-  max-height: 3508px*0.55;
+  //max-height: 3508px*0.55;
+  max-height: 4000px*0.55;
   background-color: aquamarine;
 }
