--- a/src/common.blocks/skills/skills__name.scss
+++ b/src/common.blocks/skills/skills__name.scss
@@ -1,7 +1,7 @@
 .skills__name {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 51px*0.55;
+  font-size: (51/31) + em;
   text-transform: uppercase;
 
 }
