--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -19,6 +19,7 @@
 @import '../common.blocks/contact/contact__table';
 @import '../common.blocks/contact/contact__data';
 @import '../common.blocks/contact/contact__type';
+@import '../common.blocks/section-wrapper/section-wrapper_skills';
 @import '../common.blocks/skills/skills__content';
 @import '../common.blocks/skills/skills__name';
 @import '../common.blocks/skills/skills__level';
@@ -30,6 +31,7 @@
 @import '../common.blocks/education/education__stydying-time';
 @import '../common.blocks/education/education__university-name';
 @import '../common.blocks/education/education__description';
+@import '../common.blocks/section-wrapper/section-wrapper_experience';
 @import '../common.blocks/experience/experience__company-name';
 @import '../common.blocks/software/software__content-wrapper';
 @import '../common.blocks/software/software__item';
