--- a/src/common.blocks/block-header/block-header__name.scss
+++ b/src/common.blocks/block-header/block-header__name.scss
@@ -4,6 +4,7 @@
   color: #3d6cb0;
   font-family: "Myriad Pro - Bold";
   margin-left: 2.4%;
+  margin-top: -4px;
   font-size: 3.250vw;
   white-space: nowrap;
   //font-weight: 700;
