--- a/src/common.blocks/education/education__stydying-time.scss
+++ b/src/common.blocks/education/education__stydying-time.scss
@@ -1,6 +1,9 @@
 .education__studying-time {
   color: #020202;
   font-family: "Myriad Pro - Regular";
-  font-size: (51/31) + em;
+  font-size: 1.7em;
   font-weight: 400;
+  display: inline-block;
+  margin-left: 14px;
+  //magin-top
 }
