--- a/src/common.blocks/profile/profile__content.scss
+++ b/src/common.blocks/profile/profile__content.scss
@@ -3,7 +3,8 @@
   color: #000000;
   font-family: "Myriad Pro - Regular";
   font-size: 1em;
-  margin-top: 17px;
+  margin-top: 12.7px;
+  margin-left: 0.35px;
   .bold {
     font-family: "Myriad Pro - Bold";
   }
