--- a/src/common.blocks/skills/skills__point/skills__point.scss
+++ b/src/common.blocks/skills/skills__point/skills__point.scss
@@ -1,9 +1,9 @@
 .skills__point {
-  width: 35px*0.55;
-  height: 35px*0.55;
+  width: 33px*0.55;
+  height: 33px*0.55;
   //width: 5.5%;
   //height: 5.5%;
-
+  //margin-right: 11px;
   background-color: #e6e6e6;
   border-radius: 50%;
 }
