--- a/src/common.blocks/body/body.scss
+++ b/src/common.blocks/body/body.scss
@@ -1,5 +1,6 @@
 .body {
   max-width: 1920px;
   //background-color: bisque;
-  font-size: 30.2px*0.55;
+  //font-size: 30.2px*0.55;
+  font-size: 30.22px*0.55;
 }
