--- a/src/common.blocks/education/education__university-name.scss
+++ b/src/common.blocks/education/education__university-name.scss
@@ -1,7 +1,9 @@
 .education__university-name {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: (51/31) + em;
+  font-size: 1.66em;
   font-weight: 400;
   text-transform: uppercase;
+  line-height: 1.45;
+
 }
