--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -32,7 +32,9 @@
 @import '../common.blocks/education/education__university-name';
 @import '../common.blocks/education/education__description';
 @import '../common.blocks/section-wrapper/section-wrapper_experience';
+@import '../common.blocks/experience/experience__ul';
 @import '../common.blocks/experience/experience__company-name';
+@import '../common.blocks/section-wrapper/section-wrapper_software';
 @import '../common.blocks/software/software__content-wrapper';
 @import '../common.blocks/software/software__item';
 @import '../common.blocks/software/software__tool';
