--- a/src/common.blocks/layout-grid/layout-grid.scss
+++ b/src/common.blocks/layout-grid/layout-grid.scss
@@ -9,5 +9,5 @@
   margin-top:150px*0.55;
   //max-height: 3508px*0.55;
   max-height: 4000px*0.55;
-  background-color: aquamarine;
+  //background-color: aquamarine;
 }
