--- a/src/common.blocks/software/software__scale.scss
+++ b/src/common.blocks/software/software__scale.scss
@@ -1,5 +1,7 @@
 .software__scale {
-  width: 554px*0.55;
-  height: 46px*0.55;
+  width: 540px*0.55;
+  height: 44px*0.55;
   background-color: #e6e6e6;
+  margin-top: 11px;
+  margin-left: 1px;
 }
