--- a/src/common.blocks/software/software__tool.scss
+++ b/src/common.blocks/software/software__tool.scss
@@ -1,7 +1,10 @@
-.software__item {
+.software__tool {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: (51/31) + em;
+  font-size: 1.66em;
   font-weight: 400;
   text-transform: uppercase;
 }
+
+
+
