--- a/src/common.blocks/education/education__ul.scss
+++ b/src/common.blocks/education/education__ul.scss
@@ -1,7 +1,7 @@
 .education__ul {
   list-style-type: none;
   width: 90%;
-  background-color: antiquewhite;
+  //background-color: antiquewhite;
   margin-left: 15px;
   margin-top: -4.2px;
 }
