set width=100% to section wrappers at max-width:720px

--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -40,4 +40,5 @@
 @import '../common.blocks/software/software__tool';
 @import '../common.blocks/software/software__scale';
 @import '../common.blocks/software/software__level';
+@import '../common.blocks/media/_max-width/media_max-width_720';
 
