--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -9,6 +9,7 @@ doctype html
 html
     head
         meta(charset = 'utf-8')
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title Resume
     body.body
         .layout-grid
