--- a/src/common.blocks/contact/contact__table.scss
+++ b/src/common.blocks/contact/contact__table.scss
@@ -1,7 +1,7 @@
 .contact__table {
   margin-top: 12px;
   line-height: 1em;
-  border: 1px solid;
+  //border: 1px solid;
   border-collapse: collapse;
   //table-layout: fixed;
 }
