--- a/src/common.blocks/contact/contact__type.scss
+++ b/src/common.blocks/contact/contact__type.scss
@@ -4,7 +4,7 @@
   font-size: 1.3em;
   font-weight: 700;
   text-transform: uppercase;
-  border: 1px solid black;
+  //border: 1px solid black;
   padding: 32px*0.55;
   padding-top: 25px;
   padding-right: 65px*0.55;
