--- a/src/common.blocks/section-wrapper/section-wrapper.scss
+++ b/src/common.blocks/section-wrapper/section-wrapper.scss
@@ -1,6 +1,6 @@
 .section-wrapper {
   width: 36.75%;
-  max-width: 824px*0.774;
+  //max-width: 824px*0.774;
   //width: 453px;
   margin-bottom: 90px*0.55;
 
