make resume almost responsive

--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -26,7 +26,7 @@ html
                 include ../common.blocks/profile/profile__content
             .section-wrapper
                 +header('CONTACT_ICON.png', 'contact')
-                table.contact__table
+                .contact__table
                     +contact('address', 'Main Street, City.')
                     +contact('e-mail', 'contact@domain.com')
                     +contact('phone', '555-555-555')
