--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -17,6 +17,7 @@
 @import '../common.blocks/block-header/block-header__icon';
 @import '../common.blocks/profile/profile__content';
 @import '../common.blocks/contact/contact__table';
+@import '../common.blocks/contact/contact__tr';
 @import '../common.blocks/contact/contact__data';
 @import '../common.blocks/contact/contact__type';
 @import '../common.blocks/section-wrapper/section-wrapper_skills';
@@ -41,4 +42,4 @@
 @import '../common.blocks/software/software__scale';
 @import '../common.blocks/software/software__level';
 @import '../common.blocks/media/_max-width/media_max-width_720';
-
+@import '../common.blocks/media/_max-width/media_max-width_1094';
