--- a/src/common.blocks/body/body.scss
+++ b/src/common.blocks/body/body.scss
@@ -2,5 +2,5 @@
   max-width: 1920px;
   //background-color: bisque;
   //font-size: 30.2px*0.55;
-  font-size: 30.22px*0.55;
+  font-size: calc(9.791px + 0.5vw);
 }
