--- a/src/common.blocks/education/education__li.scss
+++ b/src/common.blocks/education/education__li.scss
@@ -6,8 +6,8 @@
 .education__li:before {
   content: "";
   background-color: black;
-  width: 40px*0.55;
-  height: 40px*0.55;
+  width: 1.324em;
+  height: 1.324em;
   display: inline-block;
   border-radius: 50%;
   position: absolute;
