--- a/src/common.blocks/skills/skills__point/skills__point.scss
+++ b/src/common.blocks/skills/skills__point/skills__point.scss
@@ -1,6 +1,6 @@
 .skills__point {
-  width: 33px*0.55;
-  height: 33px*0.55;
+  width: 1.092em;
+  height: 1.092em;
   //width: 5.5%;
   //height: 5.5%;
   //margin-right: 11px;
