--- a/src/common.blocks/software/software__scale.scss
+++ b/src/common.blocks/software/software__scale.scss
@@ -1,6 +1,6 @@
 .software__scale {
-  width: 540px*0.55;
-  height: 44px*0.55;
+  width: 21.75vw;
+  height: 1.772vw;
   background-color: #e6e6e6;
   margin-top: 11px;
   margin-left: 1px;
