--- a/src/common.blocks/block-header/block-header__name.scss
+++ b/src/common.blocks/block-header/block-header__name.scss
@@ -5,7 +5,7 @@
   font-family: "Myriad Pro - Bold";
   margin-left: 2.4%;
   margin-top: -4px;
-  font-size: 3.250vw;
+  font-size: 2.671em;
   white-space: nowrap;
   //font-weight: 700;
   text-transform: uppercase;
