--- a/src/common.blocks/contact/contact__content.pug
+++ b/src/common.blocks/contact/contact__content.pug
@@ -1,4 +1,4 @@
 mixin contact(type, data)
-    tr
-        td.contact__type= type
-        td.contact__data= data
+    .contact__tr
+        .contact__type= type
+        .contact__data= data
