--- a/src/common.blocks/contact/contact__data.scss
+++ b/src/common.blocks/contact/contact__data.scss
@@ -1,11 +1,8 @@
 .contact__data {
+  display: table-cell;
   color: #000000;
   font-family: "Myriad Pro - Regular";
   font-size: 1.34em;
-  //font-weight: 400;
-  //border: 1px solid black;
   padding-top: 10px;
   padding-left: 7px;
-  //background-color: aquamarine;
-
 }
