--- a/src/common.blocks/contact/contact__type.scss
+++ b/src/common.blocks/contact/contact__type.scss
@@ -1,22 +1,12 @@
 .contact__type {
+  display: table-cell;
   color: #3d6cb0;
   font-family: "Myriad Pro - Bold";
   font-size: 1.3em;
   font-weight: 700;
   text-transform: uppercase;
-  //border: 1px solid black;
   padding: 32px*0.55;
   padding-top: 25px;
-  padding-right: 65px*0.55;
+  padding-right: 1.79em;
   padding-left: 0px;
-  //width: 10px;
-  //background-color: bisque;
 }
-
-//.contact__type:nth-child(1) {
-//  padding-top: 25px;
-//}
-
-//.contact__type:nth-child(4) {
-//  padding-top: 0px;
-//}
