--- a/src/common.blocks/header/header__disk-inner.scss
+++ b/src/common.blocks/header/header__disk-inner.scss
@@ -1,8 +1,6 @@
 .header__disk-inner {
-  width: 400px*0.55;
-  height: 400px*0.55;
-  //width: 100%;
-  //height: 100%;
+  width: 13.236em;
+  height: 13.236em;
   background-color: #3d6cb0;
   border-radius: 50%;
 }
