--- a/src/common.blocks/header/header__disk.scss
+++ b/src/common.blocks/header/header__disk.scss
@@ -1,9 +1,8 @@
 .header__disk {
-  width: 450px*0.55;
-  height: 450px*0.55;
+  width: 14.891em;
+  height: 14.891em;
   border: 2px solid #3d6cb0;
   border-radius: 50%;
-  //padding: 30px*0.55;
   display: flex;
   justify-content: center;
   align-items: center;
