--- a/src/common.blocks/media/_max-width/media_max-width_720.scss
+++ b/src/common.blocks/media/_max-width/media_max-width_720.scss
@@ -3,4 +3,12 @@
   .section-wrapper_width_wide {
     width: 100%;
   }
+
+  .layout-grid {
+    flex-wrap: nowrap;
+  }
+
+  .section-wrapper_width_wide {
+    margin-left: 0;
+  }
 }
