finish making resume responsive

--- a/src/common.blocks/layout-grid/layout-grid.scss
+++ b/src/common.blocks/layout-grid/layout-grid.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: flex-start;
   flex-wrap: wrap;
-  //align-content: space-between;
-  margin-left: 115px*0.55;
-  margin-right: 100px*0.55;
-  margin-top:150px*0.55;
+  align-content: space-between;
+  margin-left: 3.805em;
+  margin-right: 3.309em;
+  margin-top: 4.964em;
   //max-height: 3508px*0.55;
   max-height: 4000px*0.55;
-  //background-color: aquamarine;
+  //background-color: antiquewhite;
 }
