--- a/src/common.blocks/media/_max-width/media_max-width_1094.scss
+++ b/src/common.blocks/media/_max-width/media_max-width_1094.scss
@@ -1,29 +1,5 @@
-@media screen and (max-width: 1094px) and (min-width: 720px) {
-  .contact__table {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-  }
-
-  .contact__type, .contact__data {
-    display: block;
-    padding: 0;
-  }
-
-  .contact__type{
-    margin-bottom: 10px;
-  }
-
-  .contact__tr {
-    display: block;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .contact__tr:last-child {
-    margin-bottom: 0;
-  }
+@media screen and (max-width: 1094px) and (min-width: 723px) {
+ @import "../common.blocks/contact/contact_column";
 }
 
 @media screen and (max-width: 1094px) {
