--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
-.body {
+body {
   max-width: 1920px;
   font-size: calc(9.791px + 0.5vw); }
 
+@media screen and (max-width: 1094px) {
+  body {
+    font-size: 13.97px; } }
+
 @font-face {
   font-family: 'Myriad Pro - Bold';
-  src: url(/resume/fonts/MyriadPro-Bold.woff) format("woff"), url(/resume/fonts/MyriadPro-Bold.ttf) format("truetype"), url(/resume/fonts/MyriadPro-Bold.svg) format("svg");
+  src: url(fonts/MyriadPro-Bold.woff) format("woff"), url(fonts/MyriadPro-Bold.ttf) format("truetype"), url(fonts/MyriadPro-Bold.svg) format("svg");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
   font-family: 'Myriad Pro - Regular';
-  src: url(/resume/fonts/MyriadPro-Regular.woff) format("woff"), url(/resume/fonts/MyriadPro-Regular.ttf) format("truetype"), url(/resume/fonts/MyriadPro-Regular.svg) format("svg");
+  src: url(fonts/MyriadPro-Regular.woff) format("woff"), url(fonts/MyriadPro-Regular.ttf) format("truetype"), url(fonts/MyriadPro-Regular.svg) format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'Myriad Pro - Light Semi Ext';
-  src: url(/resume/fonts/MyriadPro-LightSemiExt.woff) format("woff"), url(/resume/fonts/MyriadPro-LightSemiExt.ttf) format("truetype"), url(/resume/fonts/MyriadPro-LightSemiExt.svg) format("svg");
+  src: url(fonts/MyriadPro-LightSemiExt.woff) format("woff"), url(fonts/MyriadPro-LightSemiExt.ttf) format("truetype"), url(fonts/MyriadPro-LightSemiExt.svg) format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -30,6 +34,15 @@
   margin-right: 3.309em;
   margin-top: 4.964em;
   max-height: 2200px; }
+
+@media screen and (max-width: 400px) {
+  .layout-grid {
+    margin-left: 8vw;
+    margin-right: 8vw; } }
+
+@media screen and (max-width: 722px) {
+  .layout-grid {
+    flex-wrap: nowrap; } }
 
 .header__disk {
   width: 14.891em;
@@ -51,7 +64,8 @@
 
 .header__name {
   line-height: 0.9;
-  text-align: center; }
+  text-align: center;
+  text-transform: uppercase; }
 
 .header__name-here {
   color: #000000;
@@ -83,7 +97,11 @@
   width: 36.75%;
   margin-bottom: 49.5px; }
 
-.section-wrapper_header {
+@media screen and (max-width: 722px) {
+  .section-wrapper {
+    width: 100%; } }
+
+.section-wrapper_type_for-header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,6 +110,11 @@
 .section-wrapper_width_wide {
   width: 56%;
   margin-right: 4px; }
+
+@media screen and (max-width: 722px) {
+  .section-wrapper_width_wide {
+    width: 100%;
+    margin-left: 0; } }
 
 .block-header__wrapper {
   width: 100%;
@@ -107,6 +130,10 @@
   white-space: nowrap;
   text-transform: uppercase; }
 
+@media screen and (max-width: 400px) {
+  .block-header__name {
+    font-size: 2.2em; } }
+
 .block-header__line {
   width: 100%;
   margin-left: 1.7%;
@@ -119,8 +146,11 @@
   width: 4.78em;
   max-width: 81.4px; }
 
+@media screen and (max-width: 400px) {
+  .block-header__icon {
+    width: 3.5em; } }
+
 .profile__content {
-  width: 100%;
   color: #000000;
   font-family: "Myriad Pro - Regular";
   font-size: 1em;
@@ -133,7 +163,7 @@
   display: table;
   margin-top: 12px;
   line-height: 1em;
-  border-collapse: collapse; }
+  margin-left: -2px; }
 
 .contact__tr {
   display: table-row; }
@@ -143,8 +173,8 @@
   color: #000000;
   font-family: "Myriad Pro - Regular";
   font-size: 1.34em;
-  padding-top: 10px;
-  padding-left: 7px; }
+  padding-top: 9px;
+  padding-left: 5px; }
 
 .contact__type {
   display: table-cell;
@@ -153,19 +183,55 @@
   font-size: 1.3em;
   font-weight: 700;
   text-transform: uppercase;
-  padding: 17.6px;
-  padding-top: 25px;
-  padding-right: 1.79em;
-  padding-left: 0px; }
+  padding: 24px 1.79em 17.6px 0px; }
 
-.section-wrapper_skills {
-  margin-top: -8.8px; }
+.contact__table
+.contact__tr:nth-child(4)
+.contact__type {
+  padding-top: 22px; }
+
+@media screen and (max-width: 400px) {
+  .contact__table {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .contact__type, .contact__data {
+    display: block;
+    padding: 0; }
+  .contact__type {
+    margin-bottom: 10px; }
+  .contact__tr {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px; }
+  .contact__tr:last-child {
+    margin-bottom: 0; } }
+
+@media screen and (max-width: 1094px) and (min-width: 723px) {
+  .contact__table {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .contact__type, .contact__data {
+    display: block;
+    padding: 0; }
+  .contact__type {
+    margin-bottom: 10px; }
+  .contact__tr {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px; }
+  .contact__tr:last-child {
+    margin-bottom: 0; } }
+
+.section-wrapper_type_for-skills {
+  margin-top: -11px; }
 
 .skills__content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 24.381px; }
+  margin-top: 22.446px; }
 
 .skills__name {
   color: #000000;
@@ -178,8 +244,12 @@
 .skills__level {
   display: flex;
   justify-content: space-between;
-  width: 77.8%;
+  width: 78%;
   margin-bottom: 22px; }
+
+@media screen and (max-width: 722px) {
+  .skills__level {
+    width: 50vw; } }
 
 .skills__point {
   width: 1.092em;
@@ -196,9 +266,13 @@
   margin-left: 15px;
   margin-top: -2.5px; }
 
+@media screen and (max-width: 722px) {
+  .education__ul {
+    margin-left: 5px; } }
+
 .education__li {
   position: relative;
-  margin-bottom: 13px; }
+  margin-bottom: 12.5px; }
 
 .education__li:before {
   content: "";
@@ -229,7 +303,8 @@
   font-family: "Myriad Pro - Regular";
   font-size: 1.7em;
   font-weight: 400;
-  display: inline-block; }
+  display: inline-block;
+  margin-left: -2px; }
 
 .education__university-name {
   color: #000000;
@@ -244,14 +319,13 @@
   font-family: "Myriad Pro - Regular";
   font-size: 1em;
   font-weight: 400;
-  line-height: 1.2;
   display: inline-block;
   margin-top: 2.5px;
   margin-left: 2px;
   line-height: 1.255; }
 
-.section-wrapper_experience {
-  margin-top: -6.5px; }
+.section-wrapper_type_for-experience {
+  margin-top: -10px; }
 
 .experience__ul {
   margin-top: 42px; }
@@ -259,7 +333,7 @@
 .experience__company-name {
   color: black; }
 
-.section-wrapper_software {
+.section-wrapper_type_for-software {
   margin-top: -6px; }
 
 .software__content-wrapper {
@@ -269,7 +343,13 @@
   height: 300px;
   margin-top: 25px;
   margin-left: 5.5px;
-  margin-right: 0.5px; }
+  margin-right: 0.5px;
+  width: 99%; }
+
+@media screen and (max-width: 722px) {
+  .software__content-wrapper {
+    height: 500px;
+    align-content: center; } }
 
 .software__item {
   margin-bottom: 25px; }
@@ -288,70 +368,11 @@
   margin-top: 11px;
   margin-left: 1px; }
 
+@media screen and (max-width: 722px) {
+  .software__scale {
+    width: 50vw;
+    height: 2.5vw; } }
+
 .software__level {
   background-color: #3d6cb0;
   height: 100%; }
-
-@media screen and (max-width: 400px) {
-  .contact__table {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-  .contact__type, .contact__data {
-    display: block;
-    padding: 0; }
-  .contact__type {
-    margin-bottom: 10px; }
-  .contact__tr {
-    display: block;
-    text-align: center;
-    margin-bottom: 20px; }
-  .contact__tr:last-child {
-    margin-bottom: 0; }
-  .layout-grid {
-    margin-left: 8vw;
-    margin-right: 8vw; }
-  .block-header__icon {
-    width: 3.5em; }
-  .block-header__name {
-    font-size: 2.2em; } }
-
-@media screen and (max-width: 722px) {
-  .section-wrapper,
-  .section-wrapper_width_wide {
-    width: 100%; }
-  .layout-grid {
-    flex-wrap: nowrap; }
-  .section-wrapper_width_wide {
-    margin-left: 0; }
-  .skills__level {
-    width: 50vw; }
-  .education__ul {
-    margin-left: 5px; }
-  .software__scale {
-    width: 50vw;
-    height: 2.5vw; }
-  .software__content-wrapper {
-    height: 500px;
-    align-content: center; } }
-
-@media screen and (max-width: 1094px) and (min-width: 723px) {
-  .contact__table {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-  .contact__type, .contact__data {
-    display: block;
-    padding: 0; }
-  .contact__type {
-    margin-bottom: 10px; }
-  .contact__tr {
-    display: block;
-    text-align: center;
-    margin-bottom: 20px; }
-  .contact__tr:last-child {
-    margin-bottom: 0; } }
-
-@media screen and (max-width: 1094px) {
-  .body {
-    font-size: 13.97px; } }
