--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -47,7 +47,7 @@ html
             section(class=wideWrapperClasses)
                 +header('education-icon.png', 'education')
                 ul.education__ul
-                    - for (let i = 0; i < 3; i++)
+                    - for (let i = 0; i < 4; i++)
                         +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
 
             section(class=wideWrapperClasses class=['section-wrapper_type_for-experience'])
@@ -64,4 +64,4 @@ html
                                    ['indesign', 312/554*100], ['dreamweaver', 461/554*100],
                                    ['after effects', 342/554*100], ['html&css3', 505/554*100]];
                     each item in software
-                        +software('photoshop', 505/554*100)
+                        +software(item[0], item[1])
