replace em with rem and set publicPath in webpack.config.js for favicons-webpack-plugin

--- a/src/common.blocks/contact/contact__data.scss
+++ b/src/common.blocks/contact/contact__data.scss
@@ -2,7 +2,7 @@
   display: table-cell;
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 1.34em;
+  font-size: 1.34rem;
   padding-top: 9px;
   padding-left: 5px;
 }
