--- a/src/common.blocks/header/header__surname.scss
+++ b/src/common.blocks/header/header__surname.scss
@@ -1,7 +1,7 @@
 .header__surname {
   color: #000000;
   font-family: "Myriad Pro - Bold";
-  font-size: 4.015em;
+  font-size: 4.015rem;
   font-weight: 700;
   text-transform: uppercase;
   margin-left: 15px;
