--- a/src/common.blocks/profile/profile__content.scss
+++ b/src/common.blocks/profile/profile__content.scss
@@ -1,7 +1,7 @@
 .profile__content {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 1em;
+  font-size: 1rem;
   margin-top: 12.7px;
   margin-left: 0.35px;
 
