--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -1,6 +1,7 @@
-@import '../common.blocks/body/body';
-
 @import '../fonts/fonts';
+
+@import '../common.blocks/html';
+@import '../common.blocks/body';
 
 @import '../common.blocks/layout-grid/layout-grid';
 
