--- a/src/common.blocks/block-header/block-header__name.scss
+++ b/src/common.blocks/block-header/block-header__name.scss
@@ -3,7 +3,7 @@
   font-family: "Myriad Pro - Bold";
   margin-left: 2.4%;
   margin-top: -4px;
-  font-size: 2.671em;
+  font-size: 2.671rem;
   white-space: nowrap;
   text-transform: uppercase;
 }
