--- a/src/common.blocks/education/education__description.scss
+++ b/src/common.blocks/education/education__description.scss
@@ -1,7 +1,7 @@
 .education__description {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 400;
   display: inline-block;
   margin-top: 2.5px;
