--- a/src/common.blocks/header/header__name-here.scss
+++ b/src/common.blocks/header/header__name-here.scss
@@ -1,7 +1,7 @@
 .header__name-here {
   color: #000000;
   font-family: "Myriad Pro - Light Semi Ext";
-  font-size: 3.46em;
+  font-size: 3.46rem;
   font-weight: 600;
   text-transform: uppercase;
   margin-left: 17.7px;
