--- a/src/common.blocks/html.scss
+++ b/src/common.blocks/html.scss
@@ -1,11 +1,11 @@
-body {
-  max-width: 1920px;
+html {
+  font-family: 'Myriad Pro - Regular';
   font-size: calc(9.791px + 0.5vw);
+  color: #000000;
 }
 
 @media screen and (max-width: 1094px) {
-  body {
+  html {
     font-size: 8.5px + 0.005*1094px;
   }
 }
-
