--- a/src/common.blocks/skills/skills__name.scss
+++ b/src/common.blocks/skills/skills__name.scss
@@ -1,7 +1,7 @@
 .skills__name {
   color: #000000;
   font-family: "Myriad Pro - Regular";
-  font-size: 1.68em;
+  font-size: 1.68rem;
   text-transform: uppercase;
   margin-bottom: 7.8px;
   margin-left: 2.5px;
