--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -25,11 +25,11 @@ html
         .header__job graphic designer
 
       section.section-wrapper
-        +header('profile-icon.png', 'profile')
+        +block-header('profile-icon.png', 'profile')
         include ../common.blocks/profile/profile__content
 
       section.section-wrapper
-        +header('contact-icon.png', 'contact')
+        +block-header('contact-icon.png', 'contact')
         table.contact__table
           -
             const contact = [['address', 'Main Street, City.'], ['e-mail', 'contact@domain.com'],
@@ -38,26 +38,26 @@ html
             +contact(item[0], item[1])
 
       section(class=['section-wrapper', 'section-wrapper_type_for-skills'])
-        +header('skills-icon.png', 'skills')
+        +block-header('skills-icon.png', 'skills')
         .skills__content
           - const skills = [['creative', '9'], ['teamwork', '11'], ['innovate', '6'], ['communication', '11']];
           each item in skills
             +skill(item[0], item[1])
 
       section(class=wideWrapperClasses)
-        +header('education-icon.png', 'education')
+        +block-header('education-icon.png', 'education')
         ul.education__ul
           - for (let i = 0; i < 4; i++)
             +education('master degree', 'Feb 2011 - Jun 2014', 'university name')
 
       section(class=wideWrapperClasses class=['section-wrapper_type_for-experience'])
-        +header('experience-icon.png', 'experience')
+        +block-header('experience-icon.png', 'experience')
         ul(class=['education__ul', 'experience__ul'])
           - for (let i = 0; i < 3; i++)
             +education('company name', 'Feb 2011 - Jun 2014', 'your job here', 'job')
 
       section(class=wideWrapperClasses class=['section-wrapper_type_for-software'])
-        +header('software-icon.png', 'software')
+        +block-header('software-icon.png', 'software')
         .software__content-wrapper
           -
             const software = [['photoshop', 505/554*100], ['illustrator', 391/554*100],
