--- a/src/common.blocks/block-header/block-header.pug
+++ b/src/common.blocks/block-header/block-header.pug
@@ -1,4 +1,4 @@
-mixin header(icon_name, block_name)
+mixin block-header(icon_name, block_name)
   header.block-header__wrapper
     img.block-header__icon(src=require('../img/icons/' + icon_name) alt=block_name)
     div.block-header__name= block_name
