--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -23,11 +23,7 @@
 
 @import '../common.blocks/profile/profile__content';
 
-@import '../common.blocks/contact/contact__table';
-@import '../common.blocks/contact/contact__tr';
-@import '../common.blocks/contact/contact__data';
-@import '../common.blocks/contact/contact__type';
-@import '../common.blocks/contact/contact_type_columned';
+@import "../common.blocks/contact/contact";
 
 @import '../common.blocks/section-wrapper/section-wrapper_type_for-skills';
 
