--- a/src/common.blocks/contact/contact.scss
+++ b/src/common.blocks/contact/contact.scss
@@ -1,2 +1,22 @@
-@import "./contact__table";
 @import "../contact-item/contact-item";
+
+.contact {
+  &__table {
+    display: table;
+    margin-top: 12px;
+    line-height: 1em;
+    margin-left: -2px;
+
+    @media screen and (max-width: 400px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @media screen and (max-width: 1094px) and (min-width: 723px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
