--- a/src/common.blocks/education/education.scss
+++ b/src/common.blocks/education/education.scss
@@ -1,12 +1,14 @@
-.education__ul {
+@import '../education-item/education-item';
+
+.education {
   list-style-type: none;
   width: 90%;
   margin-left: 15px;
   margin-top: -2.5px;
-}
 
-@media screen and (max-width: 722px) {
-  .education__ul {
+  @media screen and (max-width: 722px) {
     margin-left: 5px;
   }
 }
+
+
